# FSDM-Game-Programming-2021-2022

./: CMakeLists.txt  README.md
assets/textures/ui/: license.txt
libraries/Box2D/include/box2d/: b2_body.h  b2_common.h  b2_draw.h  b2_fixture.h  b2_settings.h
libraries/SFML-2.5.1/include/SFML/Graphics/: CircleShape.hpp  ConvexShape.hpp  Shape.hpp  (+5 more)
saves/: Level 1.json  save2.json
src/: board.cpp  board.hpp  main.cpp  player.cpp  player.hpp  sfml_basic.cpp
src/board_game/: board.cpp  board.hpp  main.cpp  player.cpp  player.hpp  point.cpp  point.hpp
src/other/: origin_example.cpp  pointers.cpp  sfml_basic.cpp
src/platformer/: entity.hpp  framework.cpp  framework.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  level.cpp  level.hpp  loader.cpp  loader.hpp  main.cpp  scene.cpp  scene.hpp
src/platformer/entities/: PhysicalEntity.cpp  PhysicalEntity.hpp  background.cpp  background.hpp  entity.cpp  entity.hpp  entityProperties.cpp  entityProperties.hpp  physicalEntity.cpp  physicalEntity.hpp  player.cpp  player.hpp  world.cpp  world.hpp
src/platformer/entities/entities/: coin.cpp  coin.hpp  collectible.cpp  collectible.hpp  diamond.cpp  diamond.hpp  mine.cpp  mine.hpp
src/platformer/entities/npc/: mine.cpp  mine.hpp
src/platformer/entities/world/: Tiles.cpp  Tiles.hpp  characters.cpp  characters.h  textureInfo.cpp  textureInfo.hpp  tiles.cpp  tiles.hpp
src/platformer/gui/: CoordChooser.cpp  CoordChooser.hpp  button.cpp  button.hpp  checkboxButton.cpp  checkboxButton.hpp  image.cpp  image.hpp  inputButton.cpp  inputButton.hpp  longButton.cpp  longButton.hpp  radioButton.cpp  radioButton.hpp  radioButtonGroup.cpp  radioButtonGroup.hpp  widget.cpp  widget.hpp
src/platformer/scenes/: editor.cpp  editor.hpp  levelChooser.cpp  levelChooser.hpp  levelSaver.cpp  levelSaver.hpp  mainMenu.cpp  mainMenu.hpp  options.cpp  options.h  pause.cpp  pause.h  play.cpp  play.hpp  settings.cpp  settings.hpp
src/platformer/scenes/editor/: characterChooser.cpp  characterChooser.hpp  editorPause.cpp  editorPause.hpp  frame.cpp  frame.hpp  tileChooser.cpp  tileChooser.hpp  tilePlacedEvent.cpp  tilePlacedEvent.hpp  worldEditor.cpp  worldEditor.hpp
src/platformer/scenes/events/: sceneEvent.cpp  sceneEvent.hpp  sceneEventListener.cpp  sceneEventListener.hpp
src/platformer/scenes/play/: collectibleCollision.cpp  collectibleCollision.hpp  collisionEvent.cpp  collisionEvent.hpp  groundCollision.cpp  groundCollision.hpp  playerMonsterCollision.cpp  playerMonsterCollision.hpp
src/platformer/systems/: assetStorage.cpp  assetStorage.hpp  contactListener.cpp  contactListener.hpp  inputHandler.cpp  inputHandler.hpp  renderer.cpp  renderer.hpp  soundboard.cpp  soundboard.hpp
src/platformer/utils/: PhysicsConfig.cpp  PhysicsConfig.h  emitter.hpp  filepath.cpp  filepath.hpp  listener.hpp  state.cpp  state.hpp  stateMachine.cpp  stateMachine.hpp  tileset.cpp  tileset.hpp
src/rvalue/: main.cpp
(+2 files in other folders)
